# ferrous-comics

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  cliff.toml  release-plz.toml
.claude/: settings.local.json
.github/workflows/: bump-version.yml  ci.yml  pr-title.yml  release-plz.yml  release.yml
00/7049b3c671/: metadata.json
00/7049b3c671/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
02/a911f92704/: metadata.json
02/a911f92704/0/: content_hash.txt  metadata.json  prompt.txt
11/ca96234c3b/: metadata.json
11/ca96234c3b/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
1c/62a340a514/: metadata.json
1c/62a340a514/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
1d/8634cd7b96/: metadata.json
1d/8634cd7b96/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
1d/c15193e822/: metadata.json
1d/c15193e822/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
1e/02704ae3eb/: metadata.json
1e/02704ae3eb/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
20/5242d45184/: metadata.json
20/5242d45184/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
25/141661feb4/: metadata.json
25/141661feb4/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
2c/7c85e65fe1/: metadata.json
2c/7c85e65fe1/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
2f/ca7ae7a1bc/: metadata.json
2f/ca7ae7a1bc/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
35/c30adba6a7/: metadata.json
35/c30adba6a7/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
3a/6570a007be/: metadata.json
3a/6570a007be/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
3e/36b3616a60/: metadata.json
3e/36b3616a60/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
46/8e49aba359/: metadata.json
46/8e49aba359/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
4b/202c2b7adf/: metadata.json
4b/202c2b7adf/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
4c/32f518e702/: metadata.json
4c/32f518e702/0/: content_hash.txt  metadata.json  prompt.txt
4c/32f518e702/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
4f/8bb1a3714b/: metadata.json
4f/8bb1a3714b/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
68/ab34dcd1c5/: metadata.json
68/ab34dcd1c5/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
70/bd292f6b08/: metadata.json
70/bd292f6b08/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
72/036a0831de/: metadata.json
72/036a0831de/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
72/638eae86c6/: metadata.json
72/638eae86c6/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
73/7dd83b1fe7/: metadata.json
73/7dd83b1fe7/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
74/3b93b502ea/: metadata.json
74/3b93b502ea/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
75/77bba792bc/: metadata.json
75/77bba792bc/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
77/0f588ec66c/: metadata.json
77/0f588ec66c/0/: content_hash.txt  metadata.json  prompt.txt
79/7b3da2e758/: metadata.json
79/7b3da2e758/0/: content_hash.txt  full.jsonl  metadata.json
7a/1f8e3b563d/: metadata.json
7a/1f8e3b563d/0/: content_hash.txt  metadata.json  prompt.txt
7c/ccbb381137/: metadata.json
7c/ccbb381137/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
7e/6e0cd06539/: metadata.json
7f/ac8a7db230/: metadata.json
80/2177635d80/: metadata.json
82/a2485eb21a/: metadata.json
84/6e6d06a3f9/: metadata.json
84/d296a7034b/: metadata.json
84/f4ea85aa8c/: metadata.json
86/17208d0a02/: metadata.json
89/30cb489a4b/: metadata.json
8b/a68b953f0d/: metadata.json
8b/f26a542cf8/: metadata.json
8c/16624e7256/: metadata.json
8d/3ef62bc820/: metadata.json
8d/747525ef62/: metadata.json
9c/7117ff561f/: metadata.json
a8/766f0a1fdf/: metadata.json
a9/4f83991c9d/: metadata.json
ad/fa16a507b6/: metadata.json
b0/187c708ede/: metadata.json
b6/3e54c73c49/: metadata.json
c1/3809fd6a7b/: metadata.json
c1/df01732b42/: metadata.json
c5/0941b47d04/: metadata.json
c9/00e183b8f4/: metadata.json
cc/ddd4644833/: metadata.json
d5/ebeceee67a/: metadata.json
d6/afb253ca41/: metadata.json
dd/a25de9999b/: metadata.json
de/a2e446ea7e/: metadata.json
e8/0a61d1f0d0/: metadata.json
e8/1b90c56b4e/: metadata.json
e9/ccd44287da/: metadata.json
eb/0888691380/: metadata.json
eb/ccddacad3a/: metadata.json
f1/f0a51ff2ec/: metadata.json
f5/f22537cf54/: metadata.json
fa/0805285ed1/: metadata.json
fe/c54071898a/: metadata.json
src/: config.rs  db.rs  email.rs  http.rs  main.rs
(+142 files in other folders)
