[package]
name = "ferrous-comics"
version = "1.1.2"  # overridden at release time by release.yml from the git tag
edition = "2024"
license = "MIT"

[dependencies]
anyhow     = "1.0"
chrono     = { version = "0.4", default-features = false, features = ["std"] }
dotenvy    = "0.15"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
lettre     = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder", "hostname"] }
log        = "0.4"
ureq       = { version = "2", features = ["json"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redb       = "2"

[dev-dependencies]
tempfile = "3"
mockito  = "1"

[profile.release]
strip         = true    # remove debug symbols (~50-70% size reduction)
lto           = "thin"  # cross-crate dead-code elimination without fat-LTO compile cost
codegen-units = 1       # maximize intra-crate optimization
opt-level     = "z"     # optimize for size over speed (cron CLI, not throughput-bound)
panic         = "abort" # eliminate unwinding machinery; safe — no catch_unwind in codebase
