[package]
name = "ferrous-comics"
version = "1.1.2"  # overridden at release time by release.yml from the git tag
edition = "2024"
license = "MIT"

[dependencies]
anyhow     = "1.0"
chrono     = { version = "0.4", default-features = false, features = ["std"] }
dotenvy    = "0.15"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
lettre     = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder", "hostname"] }
log        = "0.4"
ureq       = { version = "2", default-features = false, features = ["tls", "json"] }
idna_adapter = "=1.0.0"                                    # stub out IDNA Unicode normalization (via
                                                           # url/idna used by both ureq and lettre);
                                                           # all hostnames must be ASCII/punycode —
                                                           # validated at startup for XKCD_SMTP_SERVER
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redb       = "2"

[dev-dependencies]
tempfile = "3"
mockito  = "1"

[profile.release]
strip         = true    # remove debug symbols (~50-70% size reduction)
lto           = "thin"  # cross-crate dead-code elimination without fat-LTO compile cost
codegen-units = 1       # maximize intra-crate optimization
opt-level     = "z"     # optimize for size: 2.0 MiB vs 2.2 MiB ("s") vs 2.5 MiB ("3")
panic         = "abort" # saves ~300 KiB by stripping unwind tables from dependencies; this crate
                        # doesn't use catch_unwind, and for this CLI a panic in any dep is already
                        # a fatal event — we want the process to die and the cron log to show a
                        # failure, not silent recovery. redb uses a write-ahead log so an abort
                        # mid-run leaves the DB consistent; there are no connections to close
                        # gracefully (SMTP and HTTP are fire-and-forget per run)
